Fixed the new message not showing in its own box after couple of minutes

--- a/src/sass/chatmessage.sass
+++ b/src/sass/chatmessage.sass
@@ -10,10 +10,12 @@
     align-items: center
 
   .time
+    user-select: none;
     display: block
     text-align: right
 
   .permalink
+    font-size: 0.7em
     color: rgba(0,0,0,0.2)
     text-decoration: none
     font-weight: bold
